--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,8 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="libs/weiboSDK2.1_130712.jar"/>
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="libs/weibo_sdk.jar"/>
+	<classpathentry kind="lib" path="libs/cordova-2.5.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
